--- a/index.html
+++ b/index.html
@@ -72,12 +72,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							 <ul class="nav navbar-nav link-effect-4">
 							<li class="active"><a href="index.html" data-hover="Home">Home</a> </li>
-								<li><a href="about.html" data-hover="About">About </a> </li>
+								<li><a href="http://snug-radiuses.000webhostapp.com/forms/form.html" data-hover="Fill Addmission Form">Fill Addmission Form</a> </li>
 								<li><a href="gallery.html"  data-hover="Gallery">Gallery</a></li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-hover="Pages" data-toggle="dropdown">Pages <b class="caret"></b></a>
-									<ul class="dropdown-menu">
-										<li><a href="icons.html">Icons</a></li>
+								
 										<li><a href="typography.html">Short Codes</a></li>
 									</ul>
 							  </li>
