--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							  </button>
 								 <div class="navbar-brand logo ">
 									<h1 class="animated wow pulse" data-wow-delay=".5s">
-									<a href="index.html"> FreeCom Education And Welfare Society</a></h1>
+									<a href="index.html"> <font size="1"> FreeCom Education And Welfare Society</font></a></h1>
 								</div>
 
 							</div>
